# multi-imu

./: .gitignore  README.md
analysis/: README.md  analyse_drift.py  analyse_orientation_sync.py  main.py  pyproject.toml  quality_metadata.py  run_bias_order_experiment.py  run_sync_comparison.py  run_three_method_comparison.py
analysis/calibration/: README.md  __init__.py  __main__.py  _paths.py  calibrate.py  core.py  frame_alignment.py  orientation.py  per_sensor.py  pipeline.py  plots.py  section_frame_report.py  segments.py  session.py  static_windows.py  validate.py
analysis/common/: README.md  __init__.py  calibration_segments.py  csv_schema.py  model.py  paths.py  quaternion.py  signals.py  statistics.py
analysis/configs/: event_config.json  event_thresholds.thesis.json  workflow.all_methods.json  workflow.thesis.json
analysis/derived/: README.md  __init__.py  __main__.py  compute.py  pipeline.py  signals.py  validate.py
analysis/evaluation/: README.md  __init__.py  __main__.py  confusion_analysis.py  event_contrasts.py  experiments.py  imu_contribution.py  label_grid.py  permutation_importance.py  plots.py  sweep.py  trained_model.py  two_stage_events.py
analysis/events/: README.md  __init__.py  __main__.py  config.py  detectors.py  extract.py  pipeline.py
analysis/exports/: __init__.py  __main__.py  aggregate.py  analysis.py  pipeline.py
analysis/features/: FEATURE_CATALOG.md  README.md  __init__.py  __main__.py  aggregate.py  aggregate_session.py  cross_sensor.py  event_features.py  exports.py  extract.py  extraction.py  families.py  labels.py  (+15 more)
(+213 files in other folders)
