[project]
name = "analysis"
version = "0.1.0"
description = "Reproducible dual-IMU thesis analysis workflow"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ahrs>=0.3.1,<1",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "plotly>=5.20,<6",
    "scikit-learn>=1.4,<2",
    "scipy>=1.11,<2",
]
