[project]
name = "master-thesis-analysis"
version = "0.1.0"
description = "Multi-IMU cycling recording pipeline: parse, sync, calibrate, orientation, features, exports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "plotly>=5.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
